new endpoint /allUsers
