# swagger_server/models/__init__.py
@@ -5,6 +5,7 @@ from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.check_user_data import CheckUserData
 from swagger_server.models.register_user_by_admin_data import RegisterUserByAdminData
+from swagger_server.models.request_all_users import RequestAllUsers
 from swagger_server.models.request_check_user import RequestCheckUser
 from swagger_server.models.request_register_user_by_admin import RequestRegisterUserByAdmin
 from swagger_server.models.request_reset_password import RequestResetPassword
@@ -12,6 +13,7 @@ from swagger_server.models.request_signin import RequestSignin
 from swagger_server.models.request_signup import RequestSignup
 from swagger_server.models.request_token_reset_password import RequestTokenResetPassword
 from swagger_server.models.reset_password_data import ResetPasswordData
+from swagger_server.models.response_all_users import ResponseAllUsers
 from swagger_server.models.response_check_user import ResponseCheckUser
 from swagger_server.models.response_register_user_by_admin import ResponseRegisterUserByAdmin
 from swagger_server.models.response_reset_password import ResponseResetPassword
@@ -19,5 +21,5 @@ from swagger_server.models.response_reset_password_data import ResponseResetPass
 from swagger_server.models.response_signin import ResponseSignin
 from swagger_server.models.response_signup import ResponseSignup
 from swagger_server.models.response_token_reset_password import ResponseTokenResetPassword
-from swagger_server.models.signin_data import SigninData
+from swagger_server.models.signin_signup_user_data import SigninSignupUserData
 from swagger_server.models.user_data import UserData
