# swagger_server/models/request_signup.py
@@ -6,7 +6,7 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from swagger_server.models.base_model_ import Model
-from swagger_server.models.user_data import UserData  # noqa: F401,E501
+from swagger_server.models.signin_signup_user_data import SigninSignupUserData  # noqa: F401,E501
 from swagger_server import util
 
 
@@ -15,7 +15,7 @@ class RequestSignup(Model):
 
     Do not edit the class manually.
     """
-    def __init__(self, channel: str=None, external_transaction_id: str=None, data: UserData=None):  # noqa: E501
+    def __init__(self, channel: str=None, external_transaction_id: str=None, data: SigninSignupUserData=None):  # noqa: E501
         """RequestSignup - a model defined in Swagger
 
         :param channel: The channel of this RequestSignup.  # noqa: E501
@@ -23,12 +23,12 @@ class RequestSignup(Model):
         :param external_transaction_id: The external_transaction_id of this RequestSignup.  # noqa: E501
         :type external_transaction_id: str
         :param data: The data of this RequestSignup.  # noqa: E501
-        :type data: UserData
+        :type data: SigninSignupUserData
         """
         self.swagger_types = {
             'channel': str,
             'external_transaction_id': str,
-            'data': UserData
+            'data': SigninSignupUserData
         }
 
         self.attribute_map = {
@@ -98,22 +98,22 @@ class RequestSignup(Model):
         self._external_transaction_id = external_transaction_id
 
     @property
-    def data(self) -> UserData:
+    def data(self) -> SigninSignupUserData:
         """Gets the data of this RequestSignup.
 
 
         :return: The data of this RequestSignup.
-        :rtype: UserData
+        :rtype: SigninSignupUserData
         """
         return self._data
 
     @data.setter
-    def data(self, data: UserData):
+    def data(self, data: SigninSignupUserData):
         """Sets the data of this RequestSignup.
 
 
         :param data: The data of this RequestSignup.
-        :type data: UserData
+        :type data: SigninSignupUserData
         """
         if data is None:
             raise ValueError("Invalid value for `data`, must not be `None`")  # noqa: E501
