# swagger_server/models/response_all_users.py
@@ -6,35 +6,35 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from swagger_server.models.base_model_ import Model
-from swagger_server.models.user_data import UserData  # noqa: F401,E501
+from swagger_server.models.check_user_data import CheckUserData  # noqa: F401,E501
 from swagger_server import util
 
 
-class ResponseSignin(Model):
+class ResponseAllUsers(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
-    def __init__(self, code: str=None, message: str=None, internal_transaction_id: str=None, external_transaction_id: str=None, data: UserData=None):  # noqa: E501
-        """ResponseSignin - a model defined in Swagger
+    def __init__(self, code: str=None, message: str=None, internal_transaction_id: str=None, external_transaction_id: str=None, data: List[CheckUserData]=None):  # noqa: E501
+        """ResponseAllUsers - a model defined in Swagger
 
-        :param code: The code of this ResponseSignin.  # noqa: E501
+        :param code: The code of this ResponseAllUsers.  # noqa: E501
         :type code: str
-        :param message: The message of this ResponseSignin.  # noqa: E501
+        :param message: The message of this ResponseAllUsers.  # noqa: E501
         :type message: str
-        :param internal_transaction_id: The internal_transaction_id of this ResponseSignin.  # noqa: E501
+        :param internal_transaction_id: The internal_transaction_id of this ResponseAllUsers.  # noqa: E501
         :type internal_transaction_id: str
-        :param external_transaction_id: The external_transaction_id of this ResponseSignin.  # noqa: E501
+        :param external_transaction_id: The external_transaction_id of this ResponseAllUsers.  # noqa: E501
         :type external_transaction_id: str
-        :param data: The data of this ResponseSignin.  # noqa: E501
-        :type data: UserData
+        :param data: The data of this ResponseAllUsers.  # noqa: E501
+        :type data: List[CheckUserData]
         """
         self.swagger_types = {
             'code': str,
             'message': str,
             'internal_transaction_id': str,
             'external_transaction_id': str,
-            'data': UserData
+            'data': List[CheckUserData]
         }
 
         self.attribute_map = {
@@ -51,32 +51,32 @@ class ResponseSignin(Model):
         self._data = data
 
     @classmethod
-    def from_dict(cls, dikt) -> 'ResponseSignin':
+    def from_dict(cls, dikt) -> 'ResponseAllUsers':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The ResponseSignin of this ResponseSignin.  # noqa: E501
-        :rtype: ResponseSignin
+        :return: The ResponseAllUsers of this ResponseAllUsers.  # noqa: E501
+        :rtype: ResponseAllUsers
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def code(self) -> str:
-        """Gets the code of this ResponseSignin.
+        """Gets the code of this ResponseAllUsers.
 
 
-        :return: The code of this ResponseSignin.
+        :return: The code of this ResponseAllUsers.
         :rtype: str
         """
         return self._code
 
     @code.setter
     def code(self, code: str):
-        """Sets the code of this ResponseSignin.
+        """Sets the code of this ResponseAllUsers.
 
 
-        :param code: The code of this ResponseSignin.
+        :param code: The code of this ResponseAllUsers.
         :type code: str
         """
 
@@ -84,20 +84,20 @@ class ResponseSignin(Model):
 
     @property
     def message(self) -> str:
-        """Gets the message of this ResponseSignin.
+        """Gets the message of this ResponseAllUsers.
 
 
-        :return: The message of this ResponseSignin.
+        :return: The message of this ResponseAllUsers.
         :rtype: str
         """
         return self._message
 
     @message.setter
     def message(self, message: str):
-        """Sets the message of this ResponseSignin.
+        """Sets the message of this ResponseAllUsers.
 
 
-        :param message: The message of this ResponseSignin.
+        :param message: The message of this ResponseAllUsers.
         :type message: str
         """
 
@@ -105,20 +105,20 @@ class ResponseSignin(Model):
 
     @property
     def internal_transaction_id(self) -> str:
-        """Gets the internal_transaction_id of this ResponseSignin.
+        """Gets the internal_transaction_id of this ResponseAllUsers.
 
 
-        :return: The internal_transaction_id of this ResponseSignin.
+        :return: The internal_transaction_id of this ResponseAllUsers.
         :rtype: str
         """
         return self._internal_transaction_id
 
     @internal_transaction_id.setter
     def internal_transaction_id(self, internal_transaction_id: str):
-        """Sets the internal_transaction_id of this ResponseSignin.
+        """Sets the internal_transaction_id of this ResponseAllUsers.
 
 
-        :param internal_transaction_id: The internal_transaction_id of this ResponseSignin.
+        :param internal_transaction_id: The internal_transaction_id of this ResponseAllUsers.
         :type internal_transaction_id: str
         """
 
@@ -126,42 +126,42 @@ class ResponseSignin(Model):
 
     @property
     def external_transaction_id(self) -> str:
-        """Gets the external_transaction_id of this ResponseSignin.
+        """Gets the external_transaction_id of this ResponseAllUsers.
 
 
-        :return: The external_transaction_id of this ResponseSignin.
+        :return: The external_transaction_id of this ResponseAllUsers.
         :rtype: str
         """
         return self._external_transaction_id
 
     @external_transaction_id.setter
     def external_transaction_id(self, external_transaction_id: str):
-        """Sets the external_transaction_id of this ResponseSignin.
+        """Sets the external_transaction_id of this ResponseAllUsers.
 
 
-        :param external_transaction_id: The external_transaction_id of this ResponseSignin.
+        :param external_transaction_id: The external_transaction_id of this ResponseAllUsers.
         :type external_transaction_id: str
         """
 
         self._external_transaction_id = external_transaction_id
 
     @property
-    def data(self) -> UserData:
-        """Gets the data of this ResponseSignin.
+    def data(self) -> List[CheckUserData]:
+        """Gets the data of this ResponseAllUsers.
 
 
-        :return: The data of this ResponseSignin.
-        :rtype: UserData
+        :return: The data of this ResponseAllUsers.
+        :rtype: List[CheckUserData]
         """
         return self._data
 
     @data.setter
-    def data(self, data: UserData):
-        """Sets the data of this ResponseSignin.
+    def data(self, data: List[CheckUserData]):
+        """Sets the data of this ResponseAllUsers.
 
 
-        :param data: The data of this ResponseSignin.
-        :type data: UserData
+        :param data: The data of this ResponseAllUsers.
+        :type data: List[CheckUserData]
         """
 
         self._data = data
