# swagger_server/swagger/swagger.yaml
@@ -7,6 +7,28 @@ info:
 servers:
 - url: /rest/auth-ms/v1.0/
 paths:
+  /allUsers:
+    post:
+      tags:
+      - All Users
+      summary: Obtener todos los usuarios
+      description: Obtener todos los usuarios
+      operationId: all_users
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RequestAllUsers'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseAllUsers'
+        "404":
+          description: Not found users yet
+      x-openapi-router-controller: swagger_server.controllers.all_users_controller.AllUsersView
   /checkUser:
     post:
       tags:
@@ -141,6 +163,17 @@ paths:
       x-openapi-router-controller: swagger_server.controllers.reset_password_controller.ResetPasswordView
 components:
   schemas:
+    RequestAllUsers:
+      required:
+      - channel
+      - externalTransactionId
+      properties:
+        channel:
+          type: string
+          example: CHANNEL
+        externalTransactionId:
+          type: string
+          example: fcea920f7412b5da7be0cf42b8c93759
     RequestResetPassword:
       required:
       - channel
@@ -183,7 +216,7 @@ components:
           type: string
           example: fcea920f7412b5da7be0cf42b8c93759
         data:
-          $ref: '#/components/schemas/UserData'
+          $ref: '#/components/schemas/SigninSignupUserData'
     RequestRegisterUserByAdmin:
       required:
       - channel
@@ -211,7 +244,7 @@ components:
           type: string
           example: fcea920f7412b5da7be0cf42b8c93759
         data:
-          $ref: '#/components/schemas/UserData'
+          $ref: '#/components/schemas/SigninSignupUserData'
     RequestCheckUser:
       required:
       - channel
@@ -239,7 +272,7 @@ components:
         token:
           type: string
           example: b411825e90b6ead9
-    UserData:
+    SigninSignupUserData:
       type: object
       properties:
         code_email:
@@ -260,26 +293,62 @@ components:
         status:
           type: string
           example: ACTIVO
+        name:
+          type: string
+          example: Carlos
       example:
         code_email: admin@xtrim.ec
         profile: admin
         status: ACTIVO
-    SigninData:
+        name: Carlos
+    UserData:
       type: object
       properties:
         code_email:
           type: string
-          example: admin@xtrim.ec
+          example: j.alcaraz@xtrim.ec
         profile:
           type: string
-          example: admin
+          example: operaciones
+        name:
+          type: string
+          example: Jorge
+        phone:
+          type: string
+          example: "3592211658"
+        email:
+          type: string
+          example: j.alcaraz@xtrim.ec
+        city:
+          type: string
+          example: Quito
+        status:
+          type: string
+          example: ACTIVO
         role_id:
+          type: integer
+          example: 1
+        leader:
+          type: integer
+          example: 0
+        sales_channel:
+          type: string
+          example: CALLCENTER
+        id_goal:
           type: integer
           example: 1
       example:
         role_id: 1
-        code_email: admin@xtrim.ec
-        profile: admin
+        phone: "3592211658"
+        city: Quito
+        code_email: j.alcaraz@xtrim.ec
+        profile: operaciones
+        name: Jorge
+        email: j.alcaraz@xtrim.ec
+        status: ACTIVO
+        leader: 0
+        sales_channel: CALLCENTER
+        id_goal: 1
     RegisterUserByAdminData:
       type: object
       properties:
@@ -380,7 +449,7 @@ components:
           type: string
           example: fcea920f7412b5da7be0cf42b8c93759
         data:
-          $ref: '#/components/schemas/SigninData'
+          $ref: '#/components/schemas/UserData'
       example:
         code: "0"
         data:
@@ -390,6 +459,25 @@ components:
         internalTransactionId: d290f1ee-6c54-4b01-90e6-d701748f0851
         externalTransactionId: fcea920f7412b5da7be0cf42b8c93759
         message: Inicio de sesión exitoso
+    ResponseAllUsers:
+      properties:
+        code:
+          type: string
+          example: "0"
+        message:
+          type: string
+          example: Datos obtenidos exitosamente
+        internalTransactionId:
+          type: string
+          format: uuid
+          example: d290f1ee-6c54-4b01-90e6-d701748f0851
+        externalTransactionId:
+          type: string
+          example: fcea920f7412b5da7be0cf42b8c93759
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/UserData'
     ResponseCheckUser:
       properties:
         code:
@@ -413,6 +501,7 @@ components:
           code_email: admin@xtrim.ec
           profile: admin
           status: ACTIVO
+          name: Carlos
         internalTransactionId: d290f1ee-6c54-4b01-90e6-d701748f0851
         externalTransactionId: fcea920f7412b5da7be0cf42b8c93759
         message: Datos obtenidos exitosamente
